Wed Aug 29 08:16:00 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OBV/Simple/client.cpp:
        * tests/OBV/Simple/Client_i.cpp:
        * tests/OBV/Simple/run_test.pl:
          Let the client shutdown the server. Fixes test failure on
          OpenVMS

Wed Aug 29 07:52:00 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/POA/Default_Servant2/client.cpp:
        * tests/POA/Default_Servant2/File.idl:
        * tests/POA/Default_Servant2/File_i.cpp:
        * tests/POA/Default_Servant2/File_i.h:
        * tests/POA/Default_Servant2/run_test.pl:
        * tests/POA/Default_Servant2/server.cpp:
          Added a shutdown call to the server so that we shutdown nicely,
          fixes the crash of this test on OpenVMS

Tue Aug 28 20:48:47 UTC 2007  Steve Huston  <shuston@riverace.com>

        * tests/Param_Test/run_test.pl: Added missing config argument to
          the create_target() call. Fixes test failures on all platforms.

Tue Aug 28 18:42:00 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_1568_Regression/run_test.pl:
        * tests/Bug_1568_Regression/server.cpp:
        * tests/Bug_1568_Regression/client.cpp:
        * tests/Bug_1568_Regression/Test.idl:
          Added a shutdown call to the server so that we shutdown nicely,
          fixes the crash of this test on OpenVMS

Tue Aug 28 14:16:37 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * docs/notification/using_monitor_extensions.html:

          Documented the extended monitoring interfaces.

Tue Aug 28 10:29:00 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB.cpp:
        * tao/ORB_Core.cpp:
          Layout changes

        * tao/RTCORBA.mpc:
        * tao/RTPortableServer.mpc:
          Simplified these files

Mon Aug 27 13:29:00 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2356_Regression/client.cpp:
          Fixed error in this test program, when things did work we returned