@@ -1,3 +1,8 @@
+Wed Aug 29 10:07:00 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/POA/Forwarding/run_test.pl:
+          Updated for VxWorks cross platform testing
+
 Wed Aug 29 08:16:00 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/OBV/Simple/client.cpp:
